# dependencies-mypy

./: pyproject.toml
dependencies-stubs/: __init__.pyi
