[tool.poetry]
name = "dependencies-stubs"
version = "0.0.1dev0"
description = "Type checker tools for dependencies library usage."
authors = ["Artem Malyshev <proofit404@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
